ai gamification + leader board
